--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -32,6 +32,7 @@
 <h2 id="introduccion">Introduccion</h2>
 <h2 id="agradecimientos">Agradecimientos</h2>
 <h2 id="invernadero-1">Invernadero</h2>
+<p>Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
 <h2 id="build-this-site">Build this site :</h2>
             </div>
