--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -17,10 +17,10 @@
           <li class="nav-header">Table of Contents</li>
         </ul>
         <ul>
-        <li><a href="#invernadero">Invernadero</a><ul>
+        <li><a href="#invernadero-inteligente">Invernadero Inteligente</a><ul>
         <li><a href="#introduccion">Introduccion</a></li>
         <li><a href="#agradecimientos">Agradecimientos</a></li>
-        <li><a href="#invernadero-1">Invernadero</a></li>
+        <li><a href="#invernadero">Invernadero</a></li>
         <li><a href="#internet-de-las-cosas">Internet de las cosas</a></li>
         <li><a href="#build-this-site">Build this site :</a></li>
         </ul></li>
@@ -28,11 +28,12 @@
         </div>
       </div>
             <div class="span9">
-            <h1 id="invernadero">Invernadero</h1>
+            <h1 id="invernadero-inteligente">Invernadero Inteligente</h1>
+<p><strong>Universidad Autonoma del Estado de Mexico</strong> Valle de Mexico Presenta: Noe Vasquez Godinez, noe-x@outlook.com Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com</p>
 <h2 id="introduccion">Introduccion</h2>
 <p>Se documenta la implementacion de un invernadero inteligente, utilizando Arduino y RaspBerry PI.</p>
 <h2 id="agradecimientos">Agradecimientos</h2>
-<h2 id="invernadero-1">Invernadero</h2>
+<h2 id="invernadero">Invernadero</h2>
 <p>Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
 <h2 id="build-this-site">Build this site :</h2>
