--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -29,7 +29,11 @@
       </div>
             <div class="span9">
             <h1 id="invernadero-inteligente">Invernadero Inteligente</h1>
-<p><strong>Universidad Autonoma del Estado de Mexico</strong> Valle de Mexico Presenta: Noe Vasquez Godinez, noe-x@outlook.com Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com</p>
+<p><strong>Universidad Autonoma del Estado de Mexico</strong></p>
+<p>Valle de Mexico</p>
+<p>Presenta:</p>
+<p>Noe Vasquez Godinez, noe-x@outlook.com</p>
+<p>Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com</p>
 <h2 id="introduccion">Introduccion</h2>
 <p>Se documenta la implementacion de un invernadero inteligente, utilizando Arduino y RaspBerry PI.</p>
 <h2 id="agradecimientos">Agradecimientos</h2>
