--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -30,11 +30,10 @@
             <div class="span9">
             <h1 id="invernadero-inteligente">Invernadero Inteligente</h1>
 <p><strong>Universidad Autonoma del Estado de Mexico</strong></p>
-<pre><code>Valle de Mexico</code></pre>
+<p>Valle de Mexico</p>
 <p>Presenta:</p>
-<pre><code>Noe Vasquez Godinez, noe-x@outlook.com
-
-Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com</code></pre>
+<p>Noe Vasquez Godinez, noe-x@outlook.com</p>
+<p>Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com</p>
 <h2 id="introduccion">Introduccion</h2>
 <p>Se documenta la implementacion de un invernadero inteligente, utilizando Arduino y RaspBerry PI.</p>
 <h2 id="agradecimientos">Agradecimientos</h2>
