--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -37,6 +37,12 @@
 <h2 id="introduccion">Introduccion</h2>
 <p>Se documenta la implementacion de un invernadero inteligente, utilizando Arduino y RaspBerry PI.</p>
 <h2 id="agradecimientos">Agradecimientos</h2>
+<p>Extenedemos el agradecimiento al Dr. Carlos Omar Gonzaléz Morán, profesor de tiempo completo e investigador de la Universidad Autonoma del estado de México, Centro Universitario Valle de México, por propocionarnos el contacto con Ing. Crystian Pichardo González, jefe del departamento de nutrición del DIF Tlalnepantla, Estado de México, con el cual se darrollo el Invernadero Inteligente expuesto en este documento.</p>
+<p>Agradecemos al Ing. Christian por la confianza y permitir agregarnos a su grupo de trabajo y proyecto de invernadero inteligente.</p>
+<p>Agradecemos al DIF (Sistema Nacional para el Desarrollo Integral de la Familia) del Estado de México con ubicacion en Av. Convento de Santa Mónica s/n , esq. Convento de San Fernando, Fraccionamiento Jardines de Santa Mónica, Tlalnepantla de Baz, Estado de México, por prestar un espacio para la instalacion del invernadero.</p>
+<p>Agradecemos a la compañia de hardware y software libre Arduino, ya que la plataforma Arduino es parte fundamental de este invernadero inteligente.</p>
+<p>Agradecemos a la compañia Raspberry Pi, ya que el control de los Arduinos y tratamieno de los datos mediante Raspberry Pi es pieza clave en el invernadero inteligente.</p>
+<p>Agradecemos totalmente a la Universidad Autonoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio es donde se logro planear la parte de invernadero inteligente.</p>
 <h2 id="invernadero">Invernadero</h2>
 <p>Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
