--- a/invernadero/template.html
+++ b/invernadero/template.html
@@ -60,7 +60,7 @@ $endfor$
         </div>
       </div>
       $endif$
-      <div class="span$if(toc)$9$else$12$endif$">
+      <div class="span$if(toc)$9$else$12$endif$ text-justify ">
       $for(include-before)$
       $include-before$
       $endfor$
