--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -27,7 +27,7 @@
         </ul>
         </div>
       </div>
-            <div class="span9">
+            <div class="span9 text-justify ">
             <h1 id="invernadero-inteligente">Invernadero Inteligente</h1>
 <p><strong>Universidad Autonoma del Estado de Mexico</strong></p>
 <p>Valle de Mexico</p>
