--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -44,7 +44,7 @@
 <p>Agradecemos a la compañia Raspberry Pi, ya que el control de los Arduinos y tratamieno de los datos mediante Raspberry Pi es pieza clave en el invernadero inteligente.</p>
 <p>Agradecemos totalmente a la Universidad Autonoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio es donde se logro planear la parte de invernadero inteligente.</p>
 <h2 id="invernadero">Invernadero</h2>
-<p>Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
+<p>Cammbios Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
 <h2 id="build-this-site">Build this site :</h2>
             </div>
