--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="container">
-      <div id="includedContent"></div>
+      <div id="includedContent" class="text-justify"></div>
     <div>
   </body>
 </html>
