--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -23,17 +23,22 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Invernadero</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#introducción">Introudcción</a>
-          </li>
-        </ul>
-      </div>
-      <div id="includedContent" class="text-justify"></div>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Invernadero</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Introudcción</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div id="includedContent" class="text-justify"></div>
+        </div>
     <div>
   </body>
 </html>
