--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm" style="width: 18rem;" >
           <div>
             <ul class="nav flex-column">
               <li class="nav-item">
