--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -20,11 +20,12 @@
                    $("#includedContent").load("invernadero.html");
                });
            </script>
+
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-sm" style="width: 18rem;" >
+        <div class="col-2">
           <div>
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -36,8 +37,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm">
-          <div id="includedContent" class="text-justify"></div>
+        <div class="col-10">
+           <div id="includedContent" class="text-justify"></div>
+
         </div>
     <div>
   </body>
