--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -32,7 +32,46 @@
                 <a class="nav-link active" href="#">Invernadero</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#introducción">Introudcción</a>
+                <a class="nav-link" href="#introducción">Introducción</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Tema A</a>
               </li>
             </ul>
           </div>
