--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="custom.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
@@ -23,10 +24,15 @@
 
   </head>
   <body>
+
     <div class="container">
+      <div class="p-3 mb-2 bg-dark text-white">
+        <h1 >Invernadero Inteligente</h1>
+      </div>
+
       <div class="row">
-        <div class="col-2">
-          <div>
+        <div class="col-3 p-3 mb-2 bg-dark text-white ">
+          <div class="overflow-auto index-topics">
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link active" href="#">Invernadero</a>
@@ -34,52 +40,16 @@
               <li class="nav-item">
                 <a class="nav-link" href="#introducción">Introducción</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Tema A</a>
-              </li>
             </ul>
           </div>
         </div>
-        <div class="col-10">
-           <div id="includedContent" class="text-justify"></div>
-
+        <div class="col-9">
+          <div class="p-3 mb-2 bg-primary text-white">
+            <h5> Noe Vasquez Godinez </h5>
+            <h5> Ulises Rodrigo Gonzales Osnaya </h5>
+          </div>
+          <div id="includedContent" class="text-justify content"></div>
         </div>
-    <div>
+    </div>
   </body>
 </html>
