--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -6,7 +6,7 @@
 <p>Agradecemos al DIF (Sistema Nacional para el Desarrollo Integral de la Familia) del Estado de México con ubicación en Av. Convento de Santa Mónica s/n , esq. Convento de San Fernando, Fraccionamiento Jardines de Santa Mónica, Tlalnepantla de Baz, Estado de México, por prestar un espacio para la instalación del invernadero.</p>
 <p>Agradecemos a la compañía de hardware y software libre Arduino, ya que la plataforma Arduino es parte fundamental de este invernadero inteligente.</p>
 <p>Agradecemos a la compañía Raspberry Pi, ya que el control de los Arduinos y tratamiento de los datos mediante Raspberry Pi es pieza clave en el invernadero inteligente.</p>
-<p>Agradecemos totalmente a la Universidad Autónoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio es donde se logro planear la parte de invernadero inteligente.</p>
+<p>Agradecemos totalmente a la Universidad Autónoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio academico es donde se logro planear gran parte del invernadero inteligente.</p>
 <h2 id="invernadero">Invernadero</h2>
 <p>Cammbios Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
