--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -35,18 +35,43 @@
           <div class="overflow-auto index-topics">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Invernadero</a>
+                <a class="nav-link active" href="#"><h2>Contenido :</ h2></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#introducción">Introducción</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#invernadero">Invernadero</a>
+                <ol>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#definición">Definición</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#tipos">Tipos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#tipos">Medio Ambiente</a>
+                  </li>
+                </ol>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#introducción">Internet de las cosas</a>
               </li>
             </ul>
           </div>
         </div>
         <div class="col-9">
+          <!--
+          <div class="text-center">
+            <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
+          </div>
+          -->
           <div class="p-3 mb-2 bg-primary text-white">
-            <h5> Noe Vasquez Godinez </h5>
-            <h5> Ulises Rodrigo Gonzales Osnaya </h5>
+            <h4> Noe Vasquez Godinez, noe-x@outlook.com </h4>
+            <h4> Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com </h4>
+          </div>
+          <div class="text-center">
+            <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
           </div>
           <div id="includedContent" class="text-justify content"></div>
         </div>
