--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -24,18 +24,77 @@
 
   </head>
   <body>
+    <div class="p-3 mb-2 bg-dark text-white head-title">
+      <h1 >Invernadero Inteligente</h1>
+    </div>
 
-    <div class="container">
-      <div class="p-3 mb-2 bg-dark text-white">
-        <h1 >Invernadero Inteligente</h1>
+    <div class="container-fluid main">
+
+      <div class="p-3 mb-2 bg-dark text-white index-topics">
+        <div class="overflow-auto ">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#"><h4>Contenido</ h4></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#introducción">Introducción</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#invernadero">Invernadero</a>
+              <ol>
+                <li class="nav-item">
+                  <a class="nav-link" href="#definición">Definición</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#tipos">Tipos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#tipos">Medio Ambiente</a>
+                </li>
+              </ol>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#introducción">Internet de las cosas</a>
+            </li>
+          </ul>
+        </div>
       </div>
+      <div>
+        <div class="text-center">
+          <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="p-3 mb-2 bg-primary text-white presentation">
+          <h4> Noe Vasquez Godinez</h4>
+          <h4> Ulises Rodrigo Gonzales Osnaya</h4>
+        </div>
 
+        <div id="includedContent" class="text-justify content"></div>
+
+      </div>
+    </div>
+<!--
       <div class="row">
-        <div class="col-3 p-3 mb-2 bg-dark text-white ">
-          <div class="overflow-auto index-topics">
+        <div class="col-3 p-3 mb-2 bg-dark text-white index-topics">
+          <div class="overflow-auto ">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#"><h2>Contenido :</ h2></a>
+                <a class="nav-link active" href="#"><h4>Contenido</ h4></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#introducción">Introducción</a>
@@ -61,14 +120,10 @@
           </div>
         </div>
         <div class="col-9">
-          <!--
-          <div class="text-center">
-            <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
-          </div>
-          -->
+
           <div class="p-3 mb-2 bg-primary text-white">
-            <h4> Noe Vasquez Godinez, noe-x@outlook.com </h4>
-            <h4> Ulises Rodrigo Gonzales Osnaya, ulywhy@gmail.com </h4>
+            <h4> Noe Vasquez Godinez</h4>
+            <h4> Ulises Rodrigo Gonzales Osnaya</h4>
           </div>
           <div class="text-center">
             <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
@@ -76,5 +131,6 @@
           <div id="includedContent" class="text-justify content"></div>
         </div>
     </div>
+    -->
   </body>
 </html>
