--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -28,7 +28,7 @@
       <h1 >Invernadero Inteligente</h1>
     </div>
 
-    <div class="container-fluid main">
+    <div class="container main">
 
       <div class="p-3 mb-2 bg-dark text-white index-topics">
         <div class="overflow-auto ">
