--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -27,7 +27,7 @@
     <div class="p-3 mb-2 bg-dark text-white head-title">
       <h1 >Invernadero Inteligente</h1>
     </div>
-
+    <!--
     <div class="container main">
 
       <div class="p-3 mb-2 bg-dark text-white index-topics">
@@ -63,22 +63,6 @@
         <div class="text-center">
           <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="p-3 mb-2 bg-primary text-white presentation">
           <h4> Noe Vasquez Godinez</h4>
           <h4> Ulises Rodrigo Gonzales Osnaya</h4>
@@ -88,7 +72,8 @@
 
       </div>
     </div>
-<!--
+    -->
+    <div class="container-fluid">
       <div class="row">
         <div class="col-3 p-3 mb-2 bg-dark text-white index-topics">
           <div class="overflow-auto ">
@@ -131,6 +116,6 @@
           <div id="includedContent" class="text-justify content"></div>
         </div>
     </div>
-    -->
+    </div>
   </body>
 </html>
