--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="custom.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
       crossorigin="anonymous"></script>
 
-    <script src="jquery.js"></script>
+      <script src="jquery.js"></script>
            <script>
                $(function(){
                    $("#includedContent").load("invernadero.html");
@@ -24,58 +25,39 @@
 
   </head>
   <body>
-    <div class="p-3 mb-2 bg-dark text-white head-title">
-      <h1 >Invernadero Inteligente</h1>
-    </div>
-    <!--
-    <div class="container main">
 
-      <div class="p-3 mb-2 bg-dark text-white index-topics">
-        <div class="overflow-auto ">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#"><h4>Contenido</ h4></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#introducción">Introducción</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#invernadero">Invernadero</a>
-              <ol>
-                <li class="nav-item">
-                  <a class="nav-link" href="#definición">Definición</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#tipos">Tipos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#tipos">Medio Ambiente</a>
-                </li>
-              </ol>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#introducción">Internet de las cosas</a>
-            </li>
-          </ul>
-        </div>
+
+    <div class="container">
+      <div class="p-3 mb-2 bg-dark text-white head-title">
+        <h1 >Invernadero Inteligente</h1>
       </div>
-      <div>
-        <div class="text-center">
-          <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
-        </div>
+      <div class="index-topics">
+        <nav class="navbar navbar-light bg-light">
+          <h3>Contenido</h3>
+          <a class="navbar-brand" href="#introducción">Introducción</a>
+          <a class="navbar-brand" href="#agradecimientos">Agradecimientos</a>
+          <a class="navbar-brand" href="#">Fixed bottom</a>
+        </nav>
+      </div>
+      <div class="content">
+
         <div class="p-3 mb-2 bg-primary text-white presentation">
           <h4> Noe Vasquez Godinez</h4>
           <h4> Ulises Rodrigo Gonzales Osnaya</h4>
         </div>
 
-        <div id="includedContent" class="text-justify content"></div>
+        <div class="text-center">
+          <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
+        </div>
 
+        <div id="includedContent" class="text-justify"></div>
       </div>
     </div>
-    -->
-    <div class="container-fluid">
+      <!--
       <div class="row">
         <div class="col-3 p-3 mb-2 bg-dark text-white index-topics">
+
+
           <div class="overflow-auto ">
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -101,8 +83,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="#introducción">Internet de las cosas</a>
               </li>
+              <li class="nav-item">
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
+              </li>
             </ul>
           </div>
+
         </div>
         <div class="col-9">
 
@@ -116,6 +104,8 @@
           <div id="includedContent" class="text-justify content"></div>
         </div>
     </div>
+
     </div>
+    -->
   </body>
 </html>
