--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -25,18 +25,22 @@
 
   </head>
   <body>
-
-
+    <div class="p-3 mb-2 bg-dark text-white head-title">
+      <h1 >Invernadero Inteligente</h1>
+    </div>
     <div class="container">
-      <div class="p-3 mb-2 bg-dark text-white head-title">
-        <h1 >Invernadero Inteligente</h1>
-      </div>
+
       <div class="index-topics">
         <nav class="navbar navbar-light bg-light">
           <h3>Contenido</h3>
-          <a class="navbar-brand" href="#introducción">Introducción</a>
-          <a class="navbar-brand" href="#agradecimientos">Agradecimientos</a>
-          <a class="navbar-brand" href="#">Fixed bottom</a>
+        <ol>
+            <li><a class="navbar-brand" href="#introducción">Introducción</a></li>
+            <li><a class="navbar-brand" href="#agradecimientos">Agradecimientos</a></li>
+            <li><a class="navbar-brand" href="#invernadero">Invernadero</a></li>
+            <ol>
+                <li><a class="navbar-brand" href="#definición">Definición</a></li>
+            </ol>
+        </ol>
         </nav>
       </div>
       <div class="content">
@@ -53,59 +57,5 @@
         <div id="includedContent" class="text-justify"></div>
       </div>
     </div>
-      <!--
-      <div class="row">
-        <div class="col-3 p-3 mb-2 bg-dark text-white index-topics">
-
-
-          <div class="overflow-auto ">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="#"><h4>Contenido</ h4></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Introducción</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#invernadero">Invernadero</a>
-                <ol>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#definición">Definición</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#tipos">Tipos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#tipos">Medio Ambiente</a>
-                  </li>
-                </ol>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#introducción">Internet de las cosas</a>
-              </li>
-              <li class="nav-item">
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                  <i class="fa fa-bars"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-
-        </div>
-        <div class="col-9">
-
-          <div class="p-3 mb-2 bg-primary text-white">
-            <h4> Noe Vasquez Godinez</h4>
-            <h4> Ulises Rodrigo Gonzales Osnaya</h4>
-          </div>
-          <div class="text-center">
-            <img src="./img/photos/IMG_20190902_095426.jpg" class="img-fluid img-thumbnail img-custom" alt="Responsive image">
-          </div>
-          <div id="includedContent" class="text-justify content"></div>
-        </div>
-    </div>
-
-    </div>
-    -->
   </body>
 </html>
