--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -30,18 +30,32 @@
     </div>
     <div class="container">
 
-      <div class="index-topics">
-        <nav class="navbar navbar-light bg-light">
+      <div class="index-topics overflow-auto">
+        <!--<nav class="navbar navbar-light bg-light">-->
           <h3>Contenido</h3>
         <ol>
             <li><a class="navbar-brand" href="#introducción">Introducción</a></li>
             <li><a class="navbar-brand" href="#agradecimientos">Agradecimientos</a></li>
             <li><a class="navbar-brand" href="#invernadero">Invernadero</a></li>
             <ol>
-                <li><a class="navbar-brand" href="#definición">Definición</a></li>
+                <li><a class="navbar-brand" href="#definición-de-invernadero">Definición</a></li>
+                <li><a class="navbar-brand" href="#invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</a></li>
             </ol>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
+            <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
         </ol>
-        </nav>
+        <!--</nav>-->
       </div>
       <div class="content">
 
