--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -8,5 +8,26 @@
 <p>Agradecemos a la compañía Raspberry Pi, ya que el control de los Arduinos y tratamiento de los datos mediante Raspberry Pi es pieza clave en el invernadero inteligente.</p>
 <p>Agradecemos totalmente a la Universidad Autónoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio academico es donde se logro planear gran parte del invernadero inteligente.</p>
 <h2 id="invernadero">Invernadero</h2>
-<p>Cammbios Un invernadero, estufa fría o invernáculo, es un lugar cerrado, estático y accesible a pie que se destina al cultivo de plantas, tanto decorativas como huertícolas, para protegerlas del exceso de frío en ciertas épocas del año. Habitualmente está dotado de una cubierta exterior translúcida de vidrio o de plástico, que permite el control de la temperatura, la humedad y otros factores ambientales, que se utiliza para favorecer el desarrollo de las plantas.</p>
+<p>Parte fundamental de este trabajo esta relacionado con los invernaderos, a continuación se describe lo que es un invernadero así como sus características y funciones, un invernadero necesita manejar adecuadamente temperaturas de ambiente y suelo, mantener bajo control estas variables de medición garantizan aprovechar todos los beneficios que un invernadero proporciona.</p>
+<h3 id="definición-de-invernadero">Definición de Invernadero</h3>
+<p>Un invernadero es aquella estructura cerrada, el nivel de tecnificacion con el que cuente es de acuerdo a las necesidades que se necesiten cubrir, mantener una produccion alta es el objectivo principal de un invernadero(Marin20139.</p>
+<p>Parte de la estructura del invernadero se encuentra cubierta por materiales que permiten la entrada de los rayos del sol, esto provoca una ambiente artificial, optimo para el cultivo de plantas(MiseAsto2014).</p>
+<p>Los invernaderos se encuentran clasificados en:</p>
+<ol type="1">
+<li>Invernaderos planos o tipo parral</li>
+<li>Invernadero en raspa y amagado</li>
+<li>Invernadero asimétrico</li>
+<li>Invernaderos de capilla</li>
+<li>Invernaderos de doble capilla</li>
+<li>Invernadero túnel o semicilíndrico</li>
+</ol>
+<h3 id="invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</h3>
+<p>La implementación de este tipo es en zonas con poco lluvia, su construcción se encuentra en dos partes, estructura vertical y horizontal.</p>
+<p>La estructura vertical está constituida por soportes rígidos con funciones perimetrales o interiores, los soportes internos se encuentran a una distancia de 2x2 o 3x4 metros entre si, los soportes perimetrales cuentan con una inclinación de 30 grados hacia el exterior respecto a su vertical, mismos que tienen una separación de 2 a 1.5 metros, el material de estos soportes puede ser tubos de acero, o puntales de madera. En la estructura horizontal encontramos dos mallas de alambre galvanizado superpuestas, estas mallas ayudan al soporte de laminas de plástico. Todos los soportes verticales se encuentran fijados a suelo mediante zapatas de concreto, estos bloques están dentro de pozos para cimentación(AGR2019).</p>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
+<h2 id="referencias">Referencias</h2>
+<ol type="1">
+<li><p>[MIS2014] Miserendino E. ,Astorquizaga R. (2014). Invernaderos: aspectos básicos sobre estructura, construcción y condiciones ambientales [Ebook] (p. 1). Retrieved https://inta.gob.ar/sites/default/files/script-tmpinta_agricultura23_invernadero.pdf.</p></li>
+<li><p>[MAR2013] C. Marín, M. (2013). Diseño de Invernaderos [Ebook] (p. 3). Retrieved https://www.portalfruticola.com/assets/uploads/2017/07/Manual-de-Invernaderos-2.pdf.</p></li>
+<li><p>[AGR2019] Agroinformación. Tipos de invernaderos. (2019). Retrieved 9 October 2019, from http://www.abcagro.com/industria_auxiliar/tipo_invernaderos2.asp</p></li>
+</ol>
