--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -33,29 +33,22 @@
       <div class="index-topics overflow-auto">
         <!--<nav class="navbar navbar-light bg-light">-->
           <h3>Contenido</h3>
-        <ol>
-            <li><a class="navbar-brand" href="#introducción">Introducción</a></li>
-            <li><a class="navbar-brand" href="#agradecimientos">Agradecimientos</a></li>
-            <li><a class="navbar-brand" href="#invernadero">Invernadero</a></li>
+          <ol>
+            <li><a class="" href="#introducción">Introducción</a></li>
+            <li><a class="" href="#agradecimientos">Agradecimientos</a></li>
+            <li><a class="" href="#invernadero">Invernadero</a></li>
             <ol>
-                <li><a class="navbar-brand" href="#definición-de-invernadero">Definición</a></li>
-                <li><a class="navbar-brand" href="#invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</a></li>
+                <li><a href="#definición-de-invernadero">Definición de Invernadero</a></li>
+                <li><a href="#invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</a></li>
+                <li><a href="#invernadero-en-raspa-y-amagado">Invernadero en raspa y amagado</a></li>
+                <li><a href="#invernadero-asimetrico">Invernadero asimetrico</a></li>
+                <li><a href="#invernadero-de-capilla">Invernadero de capilla</a></li>
+                <li><a href="#invernadero-de-dodble-capilla">Invernadero de dodble capilla</a></li>
+                <li><a href="#invernadero-túnel-o-semicilíndrico">Invernadero túnel o semicilíndrico</a></li>
+                <li><a href="#cuidado-ambiental">Cuidado ambiental</a></li>
             </ol>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
-            <li><a class="navbar-brand" href="#referencias">Tema A</a></li>
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
-        </ol>
-        <!--</nav>-->
+          </ol>
       </div>
       <div class="content">
 
