--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -24,7 +24,67 @@
 <h3 id="invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</h3>
 <p>La implementación de este tipo es en zonas con poco lluvia, su construcción se encuentra en dos partes, estructura vertical y horizontal.</p>
 <p>La estructura vertical está constituida por soportes rígidos con funciones perimetrales o interiores, los soportes internos se encuentran a una distancia de 2x2 o 3x4 metros entre si, los soportes perimetrales cuentan con una inclinación de 30 grados hacia el exterior respecto a su vertical, mismos que tienen una separación de 2 a 1.5 metros, el material de estos soportes puede ser tubos de acero, o puntales de madera. En la estructura horizontal encontramos dos mallas de alambre galvanizado superpuestas, estas mallas ayudan al soporte de laminas de plástico. Todos los soportes verticales se encuentran fijados a suelo mediante zapatas de concreto, estos bloques están dentro de pozos para cimentación(AGR2019).</p>
+<h3 id="invernadero-en-raspa-y-amagado">Invernadero en raspa y amagado</h3>
+<h3 id="invernadero-asimetrico">Invernadero asimetrico</h3>
+<h3 id="invernadero-de-capilla">Invernadero de capilla</h3>
+<h3 id="invernadero-de-dodble-capilla">Invernadero de dodble capilla</h3>
+<h3 id="invernadero-túnel-o-semicilíndrico">Invernadero túnel o semicilíndrico</h3>
+<h3 id="cuidado-ambiental">Cuidado ambiental</h3>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
+<h3 id="aplicaciones">Aplicaciones</h3>
+<h3 id="características">Características</h3>
+<h3 id="seguridad">Seguridad</h3>
+<h2 id="arduino">Arduino</h2>
+<h3 id="historia">Historia</h3>
+<h3 id="características-arduino">Características Arduino</h3>
+<h3 id="ide-arduino">IDE Arduino</h3>
+<h2 id="raspberry-pi">Raspberry PI</h2>
+<h3 id="historia-1">Historia</h3>
+<h3 id="características-raspberry-pi">Características Raspberry PI</h3>
+<h3 id="lenguaje-de-programación">Lenguaje de programación</h3>
+<h2 id="invernadero-inteligente">Invernadero Inteligente</h2>
+<h3 id="propósito">Propósito</h3>
+<h3 id="recursos">Recursos</h3>
+<h4 id="hardware">Hardware</h4>
+<h4 id="software">Software</h4>
+<h2 id="invernadero-caso-practico">Invernadero caso practico</h2>
+<h3 id="lugar-del-invernadero">Lugar del invernadero</h3>
+<h3 id="propósito-de-este-invernadero">Propósito de este invernadero</h3>
+<h3 id="necesidad-de-este-invernadero">Necesidad de este invernadero</h3>
+<h2 id="propuesta-de-invernadero">Propuesta de invernadero</h2>
+<h3 id="objetivos">Objetivos</h3>
+<h3 id="funcionamiento">Funcionamiento</h3>
+<h2 id="desarrollo">Desarrollo</h2>
+<h3 id="hardware-1">Hardware</h3>
+<h4 id="plataformas">Plataformas</h4>
+<h4 id="sensores">Sensores</h4>
+<h3 id="software-1">Software</h3>
+<h4 id="programación-en-arduino">Programación en arduino</h4>
+<h4 id="programación-en-python">Programación en python</h4>
+<h4 id="dashboard-web-con-angular">DashBoard web con angular</h4>
+<h4 id="dashboard-local-con-python">DashBoard local con python</h4>
+<h2 id="instalación">Instalación</h2>
+<h3 id="arduino-esclavo-y-maestro">Arduino esclavo y maestro</h3>
+<h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
+<h3 id="diagrama-de-instalación">Diagrama de instalación</h3>
+<h2 id="trabajando-con-sensores">Trabajando con sensores</h2>
+<h3 id="simulación">Simulación</h3>
+<h3 id="armado-físico">Armado físico</h3>
+<h3 id="instalacion-fisica">Instalacion fisica</h3>
+<h2 id="desarrollo-del-software-para-arduino">Desarrollo del software para Arduino</h2>
+<h3 id="diagramas-de-flujo-arduino">Diagramas de flujo Arduino</h3>
+<h2 id="desarrollo-del-software-para-raspberry-pi">Desarrollo del software para RaspBerry PI</h2>
+<h3 id="diagramas-de-flujo-raspberry-pi">Diagramas de flujo RaspBerry PI</h3>
+<h2 id="conectando-software-arduino-con-raspberry-pi">Conectando software Arduino con RaspBerry PI</h2>
+<h2 id="ejecución-de-invernadero">Ejecución de invernadero</h2>
+<h3 id="temperatura-ambiente">Temperatura ambiente</h3>
+<h3 id="temperatura-del-suelo">Temperatura del suelo</h3>
+<h3 id="humedad-del-suelo">Humedad del suelo</h3>
+<h3 id="electrovalvula">Electrovalvula</h3>
+<h2 id="desarrollo-futuro">Desarrollo futuro</h2>
+<h3 id="otros-sensores">Otros sensores</h3>
+<h3 id="automatizaciones">Automatizaciones</h3>
+<h3 id="notas-finales">Notas finales</h3>
 <h2 id="referencias">Referencias</h2>
 <ol type="1">
 <li><p>[MIS2014] Miserendino E. ,Astorquizaga R. (2014). Invernaderos: aspectos básicos sobre estructura, construcción y condiciones ambientales [Ebook] (p. 1). Retrieved https://inta.gob.ar/sites/default/files/script-tmpinta_agricultura23_invernadero.pdf.</p></li>
