--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -53,8 +53,9 @@
       <div class="content">
 
         <div class="p-3 mb-2 bg-primary text-white presentation">
-          <h4> Noe Vasquez Godinez</h4>
-          <h4> Ulises Rodrigo Gonzales Osnaya</h4>
+          <h4>Autores: </h4>
+          <h5> Noe Vasquez Godinez</h5>
+          <h5> Ulises Rodrigo Gonzales Osnaya</h5>
         </div>
 
         <div class="text-center">
