--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -6,12 +6,12 @@
 <p>Agradecemos al DIF (Sistema Nacional para el Desarrollo Integral de la Familia) del Estado de México con ubicación en Av. Convento de Santa Mónica s/n , esq. Convento de San Fernando, Fraccionamiento Jardines de Santa Mónica, Tlalnepantla de Baz, Estado de México, por prestar un espacio para la instalación del invernadero.</p>
 <p>Agradecemos a la compañía de hardware y software libre Arduino, ya que la plataforma Arduino es parte fundamental de este invernadero inteligente.</p>
 <p>Agradecemos a la compañía Raspberry Pi, ya que el control de los Arduinos y tratamiento de los datos mediante Raspberry Pi es pieza clave en el invernadero inteligente.</p>
-<p>Agradecemos totalmente a la Universidad Autónoma del Estado de México, en especial al Centro Universitario Valle de México, ya que es en este espacio academico es donde se logro planear gran parte del invernadero inteligente.</p>
+<p>Agradecemos totalmente a la Universidad Autónoma del Estado de México, en especial al Centro Universitario Valle de México, ya que en este espacio académico se logro planear gran parte del invernadero inteligente.</p>
 <h2 id="invernadero">Invernadero</h2>
 <p>Parte fundamental de este trabajo esta relacionado con los invernaderos, a continuación se describe lo que es un invernadero así como sus características y funciones, un invernadero necesita manejar adecuadamente temperaturas de ambiente y suelo, mantener bajo control estas variables de medición garantizan aprovechar todos los beneficios que un invernadero proporciona.</p>
 <h3 id="definición-de-invernadero">Definición de Invernadero</h3>
-<p>Un invernadero es aquella estructura cerrada, el nivel de tecnificacion con el que cuente es de acuerdo a las necesidades que se necesiten cubrir, mantener una produccion alta es el objectivo principal de un invernadero(Marin20139.</p>
-<p>Parte de la estructura del invernadero se encuentra cubierta por materiales que permiten la entrada de los rayos del sol, esto provoca una ambiente artificial, optimo para el cultivo de plantas(MiseAsto2014).</p>
+<p>Un invernadero es aquella estructura cerrada, el nivel de tecnificación con el que cuente es de acuerdo a las necesidades que se necesiten cubrir, mantener una producción alta es el objetivo principal de un invernadero <a href="#Marin20139">(Marin20139)</a>.</p>
+<p>Parte de la estructura del invernadero se encuentra cubierta por materiales que permiten la entrada de los rayos del sol, esto provoca una ambiente artificial, optimo para el cultivo de plantas <a href="#MiseAsto2014">(MiseAsto2014)</a>.</p>
 <p>Los invernaderos se encuentran clasificados en:</p>
 <ol type="1">
 <li>Invernaderos planos o tipo parral</li>
@@ -23,11 +23,15 @@
 </ol>
 <h3 id="invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</h3>
 <p>La implementación de este tipo es en zonas con poco lluvia, su construcción se encuentra en dos partes, estructura vertical y horizontal.</p>
-<p>La estructura vertical está constituida por soportes rígidos con funciones perimetrales o interiores, los soportes internos se encuentran a una distancia de 2x2 o 3x4 metros entre si, los soportes perimetrales cuentan con una inclinación de 30 grados hacia el exterior respecto a su vertical, mismos que tienen una separación de 2 a 1.5 metros, el material de estos soportes puede ser tubos de acero, o puntales de madera. En la estructura horizontal encontramos dos mallas de alambre galvanizado superpuestas, estas mallas ayudan al soporte de laminas de plástico. Todos los soportes verticales se encuentran fijados a suelo mediante zapatas de concreto, estos bloques están dentro de pozos para cimentación(AGR2019).</p>
+<p>La estructura vertical está constituida por soportes rígidos con funciones perimetrales o interiores, los soportes internos se encuentran a una distancia de 2x2 o 3x4 metros entre si, los soportes perimetrales cuentan con una inclinación de 30 grados hacia el exterior respecto a su vertical, mismos que tienen una separación de 2 a 1.5 metros, el material de estos soportes puede ser tubos de acero, o puntales de madera. En la estructura horizontal encontramos dos mallas de alambre galvanizado superpuestas, estas mallas ayudan al soporte de laminas de plástico. Todos los soportes verticales se encuentran fijados a suelo mediante zapatas de concreto, estos bloques están dentro de pozos para cimentación <a href="#AGR2019">(AGR2019)</a>.</p>
 <h3 id="invernadero-en-raspa-y-amagado">Invernadero en raspa y amagado</h3>
+<p>Los invernaderos de raspa y amagado son resultado de una transformación de los invernaderos planos o tipo parral cuya modificación se presenta en la forma de tratar el agua de la lluvia, ya que en un invernadero plano la lluvia puede provocar estragos en el invernadero <a href="#NOVA2019">(NOVA2019)</a>.</p>
+<p>Estos se encuentran sujetados al suelo mediante tubos galvanizados con alambres “raspa”, y la parte baja “amagado”, unidas mediante horquillas, mismas en las que se encuentran los canales para flujo del agua de lluvia <a href="#INF2019">(INF2019)</a>.</p>
 <h3 id="invernadero-asimetrico">Invernadero asimetrico</h3>
+<p>Este mantiene una geometría asimétrica, unos de sus lados se encuentra con una mayor inclinación que el otro lado, dicha inclinación es a partir de un estudio de la incidencia perpendicular de la luz solar a medio día en el invernadero, durante invierno estos cuentan con un alto aprovechamiento de la radiación solar <a href="#HOR2019">(HOR2019)</a>.</p>
+<p>En la construcción de este tipo de invernaderos, el ángulo de inclinación esta cerca a 60° grados, esta inclinación impacta en un daño estructural, ya que los fuertes vientos provocan modificaciones en este mismo, sin embargo mediante modificaciones tanto de lado bajo y las cubiertas, puede solucionarse un poco dichos problemas, pero el aprovechar totalmente la radiación solar, incluso en estaciones del año con radiación solar escala, los vuelve muy atractivos para su implementación, detalles como la ventilación son resueltos mediante aperturas tanto en el cetro o arcos de las partes superiores <a href="#ELJ2019">(ELJ2019)</a>.</p>
 <h3 id="invernadero-de-capilla">Invernadero de capilla</h3>
-<h3 id="invernadero-de-dodble-capilla">Invernadero de dodble capilla</h3>
+<h3 id="invernadero-de-doble-capilla">Invernadero de doble capilla</h3>
 <h3 id="invernadero-túnel-o-semicilíndrico">Invernadero túnel o semicilíndrico</h3>
 <h3 id="cuidado-ambiental">Cuidado ambiental</h3>
 <h2 id="internet-de-las-cosas">Internet de las cosas</h2>
@@ -87,7 +91,11 @@
 <h3 id="notas-finales">Notas finales</h3>
 <h2 id="referencias">Referencias</h2>
 <ol type="1">
-<li><p>[MIS2014] Miserendino E. ,Astorquizaga R. (2014). Invernaderos: aspectos básicos sobre estructura, construcción y condiciones ambientales [Ebook] (p. 1). Retrieved https://inta.gob.ar/sites/default/files/script-tmpinta_agricultura23_invernadero.pdf.</p></li>
-<li><p>[MAR2013] C. Marín, M. (2013). Diseño de Invernaderos [Ebook] (p. 3). Retrieved https://www.portalfruticola.com/assets/uploads/2017/07/Manual-de-Invernaderos-2.pdf.</p></li>
-<li><p>[AGR2019] Agroinformación. Tipos de invernaderos. (2019). Retrieved 9 October 2019, from http://www.abcagro.com/industria_auxiliar/tipo_invernaderos2.asp</p></li>
+<li><p><a name="MIS2014"></a> [MIS2014] Miserendino E. ,Astorquizaga R. (2014). Invernaderos: aspectos básicos sobre estructura, construcción y condiciones ambientales [Ebook] (p. 1). Retrieved https://inta.gob.ar/sites/default/files/script-tmpinta_agricultura23_invernadero.pdf.</p></li>
+<li><p><a name="MAR2013"></a> [MAR2013] C. Marín, M. (2013). Diseño de Invernaderos [Ebook] (p. 3). Retrieved https://www.portalfruticola.com/assets/uploads/2017/07/Manual-de-Invernaderos-2.pdf.</p></li>
+<li><p><a name="AGR2019"></a> [AGR2019] Agroinformación. Tipos de invernaderos. (2019). Retrieved 9 October 2019, from http://www.abcagro.com/industria_auxiliar/tipo_invernaderos2.asp</p></li>
+<li><p><a name="NOVA2019"></a> [NOVA2019] Invernaderos Raspa y Amagado - Parral - Almería. (2019). Retrieved 16 October 2019, from https://www.novagric.com/es/venta-invernaderos-novedades/tipos-de-invernaderos/invernaderos-raspa-amagado</p></li>
+<li><p><a name="INF2019"></a> [INF2019] Invernaderos de raspa y amagado. (2019). Retrieved 16 October 2019, from https://www.infoagro.com/industria_auxiliar/invernaderos_raspa_amagado.htm</p></li>
+<li><p><a name="HOR2019"></a> [HOR2019] Principales Tipos de Invernaderos. (2019). Retrieved 16 October 2019, from https://www.horticultivos.com/agricultura-protegida/invernaderos/principales-tipos-invernaderos/</p></li>
+<li><p><a name="ELJ2019"></a> [ELJ2019] Invernadero tipo asimetrico o inacral: diseños y tamaños. (2019). Retrieved 16 October 2019, from https://www.eljardin.ws/invernaderos/tipos/invernadero-tipo-asimetrico-o-inacral.html</p></li>
 </ol>
