--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Invernadero Inteligente</title>
     <link rel="stylesheet" href="custom.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -43,7 +43,6 @@
                 <li><a href="#invernadero-en-raspa-y-amagado">Invernadero en raspa y amagado</a></li>
                 <li><a href="#invernadero-asimetrico">Invernadero asimetrico</a></li>
                 <li><a href="#invernadero-de-capilla">Invernadero de capilla</a></li>
-                <li><a href="#invernadero-de-dodble-capilla">Invernadero de dodble capilla</a></li>
                 <li><a href="#invernadero-túnel-o-semicilíndrico">Invernadero túnel o semicilíndrico</a></li>
                 <li><a href="#cuidado-ambiental">Cuidado ambiental</a></li>
             </ol>
